implement driver service

--- a/services/Makefile
+++ b/services/Makefile
@@ -10,15 +10,5 @@ env-example:
     	NF>=1 {gsub(/^[[:space:]]+|[[:space:]]+$$/, "", $$1); print $$1"="}' .env > .env.example
 	echo ".env.example generated successfully."
 
-install-goose:
-	go install github.com/pressly/goose/v3/cmd/goose@latest
-	ls "$(shell go env GOPATH)/bin/" | grep goose
-
-migrate-sql:
-	goose -dir=$(MIGRATIONS_FOLDER)/postgres create $(NAME) sql
-
-migrate-up:
-	goose -env $(ENV_FILE) up
-
-migrate-down:
-	goose -env $(ENV_FILE) down
+mongo-mock-up:
+	go run ./migrations/mongo/migrate.go up
