--- a/services/docker-compose.dev.yml
+++ b/services/docker-compose.dev.yml
@@ -9,19 +9,32 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     restart: unless-stopped
 
-  kafka-ui:
-    image: provectuslabs/kafka-ui:latest
-    container_name: kafka-ui
-    ports:
-      - "8080:8080"
-    restart: unless-stopped
-
   kafka:
     image: apache/kafka:latest
     ports:
-      - "9092:9092"
+      - "9192:9092"
+      - "9193:9093"
     environment:
       KAFKA_PROCESS_ROLES: broker,controller
       KAFKA_NUM_PARTITIONS: 3
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-broker-api-versions.sh --bootstrap-server localhost:9192" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    ports:
+      - "9191:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9192
+      DYNAMIC_CONFIG_ENABLED: "true"
+    restart: unless-stopped
+    depends_on:
+      kafka:
+        condition: service_healthy
 
